# app/controllers/api/v1/searches_controller.rb
@@ -1,0 +1,13 @@
+module Api::V1
+  class SearchesController < AuthenticatedController
+    def create
+      @quotes = Quote.where('body LIKE ?', search_params[:match_text])
+      render json: { quotes: @quotes }
+    end
+
+    private
+    def search_params
+      params.require(:search).permit(:match_text)
+    end
+  end
+end
